introducing data parallelism chapter

--- a/book/Makefile
+++ b/book/Makefile
@@ -4,9 +4,10 @@ CHAPTERS=01-preface.markdown 02-preliminaries.markdown 03-introduction.markdown 
 	04-multithreading.markdown 05-fork-join.markdown 06-async-finish.markdown \
 	07-futures.markdown 08-mutual-exclusion.markdown 09-experimenting-with-sptl.markdown \
 	10-work-efficiency.markdown 11-granularity-control.markdown 12-parallel-arrays.markdown \
-	13-parallel-sorting.markdown  14-graph-theory.markdown 15-tree-computations.markdown \
-	16-models-of-parallelism.markdown 17-graphs.markdown 18-work-stealing.markdown \
-	19-parallelism-vs-concurrency.markdown
+	13-data-parallelism.markdown \
+	14-parallel-sorting.markdown  15-graph-theory.markdown 16-tree-computations.markdown \
+	17-models-of-parallelism.markdown 18-graphs.markdown 19-work-stealing.markdown \
+	20-parallelism-vs-concurrency.markdown
 
 BOOK_CONTENT=title.txt $(CHAPTERS)
 
